# settee-and-lunch

./: LICENSE  README.md  settee-and-lunch.cabal
src/Internal/: Matrix.hs  MatrixFamily.hs  Show.hs  UnboxedMatrix.hs  Util.hs
src/Numeric/: Matrix.hs
