cabal-version: 2.0

name:      settee-and-lunch
version:   0.1.0
synopsis:  Matrix calculations in pure Haskell
category:  Numeric

author:      Johannes Witzig <Johannes_W@quantentunnel.de>
license:     ISC
build-type:  Simple
tested-with: GHC == 9.0.2

library
  hs-source-dirs:  src
  exposed-modules: Numeric.Matrix
  other-modules:    Internal.Matrix
                  , Internal.UnboxedMatrix
                  , Internal.MatrixFamily
                  , Internal.Show
                  , Internal.Util
  
  build-depends:    base >4 && <5
                  , array ^>= 0.5.1.1
                  
  default-language: Haskell2010
  ghc-options: -Wall
